wagtail コンテナのDockerfileを整理

--- a/wagtail/Dockerfile
+++ b/wagtail/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.11.2
 
 RUN useradd -U ubuntu
 RUN mkdir /app && chown ubuntu:ubuntu /app
+
+ADD requirements.txt /tmp/
+RUN pip install -r /tmp/requirements.txt
+
 USER ubuntu
 WORKDIR /app
-ADD requirements.txt /app/
-USER root
-RUN pip install -r /app/requirements.txt
-USER ubuntu
